--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@nguniversal/express-engine": "^7.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
+    "guess-parser": "^0.4.22",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
